--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 <div class="flex flex-col items-center justify-center min-h-[75vh] text-center px-4">
   
   <div class="mb-10 p-3 bg-slate-800/40 backdrop-blur-sm rounded-[2rem] border border-white/10 shadow-2xl inline-block">
-    <img src="/headshot.png" alt="Pruddie" class="w-40 h-52 md:w-56 md:h-72 rounded-[1.5rem] object-cover shadow-inner">
+    <img src="/headshot.jpg" alt="Pruddie" class="w-40 h-52 md:w-56 md:h-72 rounded-[1.5rem] object-cover shadow-inner">
   </div>
 
   <h1 class="text-4xl md:text-7xl font-bold tracking-tighter mb-6 whitespace-nowrap leading-[0.85]">
