UI: Cleaned up AWS icons and updated contact page text

--- a/public/index.html
+++ b/public/index.html
@@ -65,10 +65,7 @@
       
       <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
         <i class="fab fa-aws text-2xl mb-1 block"></i>
-        <span class="text-[10px] uppercase tracking-tighter font-bold text-slate-500 group-hover:text-accent">AWS Stack</span>
-        <div class="absolute -top-10 left-1/2 -translate-x-1/2 bg-accent text-primary text-[10px] font-bold py-1 px-2 rounded opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap z-10">
-          EC2, S3, RDS, VPC, ALB, IAM, Lambda, SNS, SQS
-        </div>
+        <span class="text-[10px] uppercase tracking-tighter font-bold text-slate-500 group-hover:text-accent">AWS</span>
       </div>
 
       <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
