--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     I don’t just solve technical problems; I bridge the gap between human needs and automated solutions.
   </p>
 
-  <div class="py-16 w-full max-w-4xl mx-auto">
+  <div class="py-16 w-full max-w-5xl mx-auto">
     <div class="flex flex-wrap justify-center gap-4">
       
       <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
@@ -81,6 +81,11 @@
       <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
         <i class="fas fa-code text-2xl mb-1 block"></i>
         <span class="text-[10px] uppercase tracking-tighter font-bold text-slate-500 group-hover:text-accent">Terraform</span>
+      </div>
+
+      <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
+        <i class="fas fa-project-diagram text-2xl mb-1 block"></i>
+        <span class="text-[10px] uppercase tracking-tighter font-bold text-slate-500 group-hover:text-accent">Ansible</span>
       </div>
 
       <div class="group relative p-4 bg-slate-800/20 border border-white/5 rounded-xl transition-all duration-300 hover:border-accent/50 hover:bg-slate-800/40 opacity-40 hover:opacity-100">
